--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,8 +22,22 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>springmvc</servlet-name>
-    <url-pattern>*.do</url-pattern>
+    <url-pattern>*.mvc</url-pattern>
   </servlet-mapping>
+  <!-- Struts2配置 -->  
+    <filter>  
+        <filter-name>struts2</filter-name>  
+        <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>  
+    </filter>  
+    <filter-mapping>  
+        <filter-name>struts2</filter-name>  
+        <url-pattern>*.action</url-pattern>  
+    </filter-mapping>  
+    <filter-mapping>  
+        <filter-name>struts2</filter-name>  
+        <url-pattern>*.do</url-pattern>  
+    </filter-mapping>  
+    <!-- End Struts2配置 --> 
   <servlet>
     <servlet-name>ajaxUploadServlet</servlet-name>
     <servlet-class>com.jx.AjaxUploadFileServlet</servlet-class>
@@ -153,14 +167,4 @@
     <servlet-name>mailVerify</servlet-name>
     <url-pattern>/mailVerify</url-pattern>
   </servlet-mapping>
-  <!--  struts配置开始 -->
-	<filter>
-		<filter-name>struts2</filter-name>
-		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>struts2</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<!--  struts配置结束 -->
 </web-app>
